systemd doesn't allow vars to start with digits

filter them out, too
for safety: filter empty vars, should not happen, but still
BUG: 510968